# be-my-eye

./: .gitignore  README.md  commands.txt
.github/workflows/: mobile-ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: conversation.py  currency.py  product.py
backend/app/core/: config.py  prompts.py
backend/app/providers/: base.py  egyptian_tts.py  fakes.py  groq.py  openfoodfacts.py  roboflow_currency.py
backend/app/schemas/: common.py  conversation.py  currency.py  product.py
backend/app/services/: conversation_service.py  currency_lookup_service.py  intent_router.py  session_store.py
backend/tests/integration/: test_conversation_api.py  test_currency_api.py  test_product_api.py
backend/tests/unit/: test_common_schemas.py  test_config.py  test_conversation_request.py  test_conversation_service.py  test_currency_lookup_service.py  test_currency_schemas.py  test_egyptian_tts_provider.py  test_fake_providers.py  test_groq_providers.py  test_intent_router.py  test_main.py  test_openfoodfacts_provider.py  test_product_schemas.py  test_prompts.py  test_provider_base.py  test_roboflow_currency_provider.py  test_session_store.py
docs/: AGENT_CONTEXT.md  AI_BEHAVIOR.md  API_SPEC.md  ARCHITECTURE.md  COMPONENTS.md  DECISIONS.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PROVIDERS.md  REQUIREMENTS.md  ROADMAP.md  USER_STORIES.md  VISION.md
mobile/: .flutter-plugins-dependencies  .gitignore  pubspec.yaml
mobile/android/: gradle.properties
playground/: VLM.py  speech-to-text.py
(+26 files in other folders)
