[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "be-my-eye-backend"
version = "0.1.0"
description = "Backend for Be My Eye"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "groq>=0.31",
    "pydantic>=2.8",
    "pillow>=10.0",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.vercel]
entrypoint = "app.main:app"
